<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edurl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/url_hint"
        android:inputType="textPersonName"
        android:textColor="@color/purple_strong"
        android:textColorHint="@color/purple_weak"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/url"
        android:textColor="@color/purple_strong"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edurl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/headers"
        android:textColor="@color/purple_strong"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edheader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/header_hint"
        android:inputType="textPersonName"
        android:textColor="@color/purple_strong"
        android:textColorHint="@color/purple_weak"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edurl" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="45dp"
        android:layout_height="51dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btget" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@+id/progressBar">


        <TextView
            android:id="@+id/tvview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="call request show here"
            android:textColor="@color/purple_strong"
            android:textSize="20sp" />
    </ScrollView>

    <Button
        android:id="@+id/btpost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="post"
        android:textColor="@color/purple_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edbody"
        app:layout_constraintVertical_bias="0.13999999" />

    <Button
        android:id="@+id/btget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="GET"
        android:textColor="@color/purple_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edjsonkey"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/btbody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/body"
        android:textColor="@color/purple_strong"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/edbody"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/key"
        android:textColor="@color/purple_strong"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btget"
        app:layout_constraintEnd_toStartOf="@+id/edjsonkey"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btbody"
        app:layout_constraintVertical_bias="0.55" />

    <EditText
        android:id="@+id/edbody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/body_of_post"
        android:inputType="textPersonName"
        android:textColor="@color/purple_strong"
        android:textColorHint="@color/purple_weak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edheader" />

    <EditText
        android:id="@+id/edjsonkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/json_key"
        android:inputType="textPersonName"
        android:textColor="@color/purple_strong"
        android:textColorHint="@color/purple_weak"
        app:layout_constraintBottom_toTopOf="@+id/btpost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edbody" />

</androidx.constraintlayout.widget.ConstraintLayout>